--- a/index.html
+++ b/index.html
@@ -38,22 +38,28 @@
 
 
     <section class="Review-main" id="Review">
+
         <div class="Review">
-            <div class="imagess"><img src="img/review1.png" alt="">
+            <div class="imagess"><img src="img/review1.png" alt=""></div>
+        </div>
 
-            </div>
+        <div class="Review">
+            <div class="imagess"><img src="img/review2.png" alt=""></div>
+        </div>
 
+        <div class="Review">
+            <div class="imagess"><img src="img/review3.png" alt=""> </div>
+        </div>
+
+        <div class="Review">
+            <div class="imagess"><img src="img/review4.png" alt=""></div>
+        </div>
+
+        <div class="Review">
+            <div class="imagess"><img src="img/review5.png" alt=""></div>
         </div>
         <div class="Review">
-            <div class="imagess"><img src="img/review2.png" alt="">
-            </div>
-
-        </div>
-        <div class="Review">
-            <div class="imagess"><img src="img/review3.png" alt="">
-
-            </div>
-
+            <div class="imagess"><img src="img/review6.png" alt=""></div>
         </div>
     </section>
 
@@ -64,8 +70,7 @@
     </div>
     <section class="Video-main" id="Video">
         <div class="Video">
-            <video src="video/fish.mp4" controls muted autoplay height="100%"
-                width="100%"></video>
+            <video src="video/fish.mp4" controls muted autoplay height="100%" width="100%"></video>
         </div>
         <div class="Video">
             <video src="video/dynamic.mp4" controls muted autoplay height="100%" width="100%"> </video>
@@ -87,18 +92,34 @@
         </h2>
     </div>
     <section class="Image-main" id="Image">
+      
         <div class="Image">
+            <img src="img/jawla.png" alt="" width="100%" height="100%">
+        </div>
+        <div class="Image">
+            <img src="img/bomil.png" alt="" width="100%" height="100%">
+        </div>
+         <div class="Image">
+            <img src="img/soda.png" alt="" width="100%" height="100%">
+        </div>
+        <div class="Image">
+            <img src="img/all.png" alt="" width="100%" height="100%">
+        </div>
+       
+        <div class="Image">
+            <img src="img/frontview.jpg" alt="" width="100%" height="100%">
+        </div>
+        <div class="Image">
+            <img src="img/mor.jpg" alt="" width="100%" height="100%">
+        </div>
+          <div class="Image">
             <img src="img/lightlogo.jpeg" alt="" width="100%" height="100%">
         </div>
         <div class="Image">
             <img src="img/side.jpg" alt="" width="100%" height="100%">
         </div>
-        <div class="Image">
-            <img src="img/frontview.jpg" alt="" width="100%" height="100%">
-        </div>
-        <div class="Image">
-            <img src="img/side2.jpg" alt="" width="100%" height="100%">
-        </div>
+
+
     </section>
     <div class="online" id="Online Delivery">
         <h1>Online Order</h1><br>
@@ -135,7 +156,7 @@
                 </svg></a>
             &nbsp; &nbsp;
             <a href="  https://maps.app.goo.gl/6LV6jVRGcSq8pVAc9">
-               <i class="material-icons" style="font-size:20px">directions</i>
+                <i class="material-icons" style="font-size:20px">directions</i>
 
             </a>
             &nbsp; &nbsp;
