--- a/index.html
+++ b/index.html
@@ -92,27 +92,27 @@
         </h2>
     </div>
     <section class="Image-main" id="Image">
-      
+
         <div class="Image">
             <img src="img/jawla.png" alt="" width="100%" height="100%">
         </div>
         <div class="Image">
             <img src="img/bomil.png" alt="" width="100%" height="100%">
         </div>
-         <div class="Image">
+        <div class="Image">
             <img src="img/soda.png" alt="" width="100%" height="100%">
         </div>
         <div class="Image">
             <img src="img/all.png" alt="" width="100%" height="100%">
         </div>
-       
+
         <div class="Image">
             <img src="img/frontview.jpg" alt="" width="100%" height="100%">
         </div>
         <div class="Image">
             <img src="img/mor.jpg" alt="" width="100%" height="100%">
         </div>
-          <div class="Image">
+        <div class="Image">
             <img src="img/lightlogo.jpeg" alt="" width="100%" height="100%">
         </div>
         <div class="Image">
@@ -160,13 +160,17 @@
 
             </a>
             &nbsp; &nbsp;
-
-
-
-
         </h5>
+
     </section>
     <br>
+    <!-- WhatsApp Floating Button -->
+    <a class="whatsapp-float" href="https://wa.me/918009089273" target="_blank">💬</a>
+
+    <!-- Footer -->
+    <footer>
+        &copy; 2025 BulkBazaar. All Rights Reserved.
+    </footer>
 
 
 </body>
