--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <!-- Footer -->
     <footer>
-        &copy; 2025 BulkBazaar. All Rights Reserved.
+        &copy; yrdryfish. All Rights Reserved.
     </footer>
 
 
