--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <body>
-    <h1>YR Dry Fish</h1>
+    <h1 id="brand">YR Dry Fish</h1>
     <nav>
         <a href="#Home"> Home</a>
         <a href="#Review"> Review</a>
